--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,28 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Caesar Cipher</title>
+    <title>Master RPG - Caesar Cipher Project</title>
+    <link href="https://fonts.googleapis.com/css?family=Cinzel|Merriweather|Nunito&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="root">
-      <h1>Hola mundo!</h1>
+    <nav class="navega">
+      <ul>
+          <li>Inicio</li>
+          <li>Crear Historia</li>
+          <li>Escoger Historia</li>
+          
+      </ul>
+  </nav>
+  <div id="root">
+    <h1>Hola mundo!</h1>
+  </div>
+  <label for="textoACifrar">Historia</label>
+    <div id="textoACifrar" class="frames"></div>
+    <label for="textoCifrado">Historia Cifrada</label>
+    <div id="textoCifrado" class="frames">
     </div>
+    
     <script src="cipher.js"></script>
     <script src="index.js"></script>
   </body>
