startover afinando funciones

--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,11 @@
     </div>
     
     <label for="textoCifrado">Historia Cifrada</label>
-    <div id="textoCifrado" class="frames">
-    </div>
+    <textarea  rows="4" cols="50" name="mensajeCifrado" id="textoCifrado" class="frames"></textarea>
     <button onclick="ejecutaDescifrado()">Descifrar</button>
 
     <label for="textoDescifrado">Historia Descifrada</label>
-    <div id="textoDescifrado" class="frames">
+    <textarea  rows="4" cols="50" name="mensajeDescifrado" id="textoDescifrado" class="frames"></textarea>
     </div>
 
     <script src="cipher.js"></script>
