pasa el test básico

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
     </nav>
     <div id="logo">
-      <img src="imgs/TheMasterTool_Logo.png" alt="The Master Tool - Logo">
+      <img src="imgs/TheMasterTool_Logo2.png" alt="The Master Tool - Logo">
     </div>
 
     <label for="textoACifrar">Historia</label>
@@ -43,7 +43,7 @@
     <label for="textoDescifrado">Historia Descifrada</label>
     <textarea rows="4" cols="50" name="mensajeDescifrado" id="textoDescifrado" class="frames" readonly></textarea>
   </div>
-  </div>
+ 
   <script src="index.js"></script>
   <script src="cipher.js"></script>
 
